--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
   <div id="app"></div>
+  <noscript>
+      <h3>
+          Esta app requiere de JavaScript para funcionar
+      </h3>
+  </noscript>
 </body>
 </html>
